[package]
name = "tiny-ansi"
version = "0.1.0"
edition = "2021"
authors = ["NaokiM03"]
description = "TinyAnsi is a dead simple library that allows basic coloring of terminal characters."
keywords = ["ansi_term", "color", "terminal"]
documentation = "https://docs.rs/tiny-ansi"
repository = "https://github.com/NaokiM03/tiny-ansi-rs"
readme = "README.md"
license = "MIT"

[dependencies]
